add spain example

--- a/example/Sweden/sweden.ipynb
+++ b/example/Sweden/sweden.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,11 +29,11 @@
     "if module_path not in path:\n",
     "    path.append(module_path)\n",
     "\n",
-    "with open(join('data', 'swedish_economy.pkl'), 'rb') as file:\n",
-    "    economy = load(file)\n",
+    "with open(join('data', 'swedish_economy.pkl'), 'rb') as f:\n",
+    "    economy = load(f)\n",
     "\n",
-    "with open(join('data', 'swedish_product_names.pkl'), 'rb') as file:\n",
-    "    product_names = load(file)"
+    "with open(join('data', 'swedish_product_names.pkl'), 'rb') as f:\n",
+    "    product_names = load(f)"
    ]
   },
   {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
