--- a/examples/Spain/spain.ipynb
+++ b/examples/Spain/spain.ipynb
@@ -1,10 +1,11 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Planning the swedish economy "
+    "# Planning the spanish economy "
    ]
   },
   {
@@ -603,7 +604,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.8 (main, Nov 24 2022, 08:09:04) [Clang 14.0.6 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
