--- a/examples/Sweden/sweden.ipynb
+++ b/examples/Sweden/sweden.ipynb
@@ -38,6 +38,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 50919,  38422,   1559,  35716, 146602,  12493,  86390, 127061,\n",
+       "        27815, 107141, 153076,  41935,  38485, 161289, 135856, 170112,\n",
+       "        66704, 217365, 264931,  36413,  55081,  34363, 128909,  13328,\n",
+       "        36053, 387139, 523794, 168019,  43270,  31217, 240416, 101870,\n",
+       "        60637,  38433, 103458, 140975, 102442,  60759,  13110, 292561,\n",
+       "       180238, 115867, 181644,  53826,  31014,  34327,  31116,  34719,\n",
+       "        77704, 248812, 238986, 229242, 188960,  44791,  37088,  44089,\n",
+       "         5421,  24784,   1018])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "economy['worked_hours'][0]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -95,6 +122,11 @@
    "source": [
     "We will plan the economy for 15 periods with a horizon of 5 periods and revising the plan after 3 periods (apply these 3 periods and discard the other 2)."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -432,7 +464,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8 (main, Nov 24 2022, 08:09:04) [Clang 14.0.6 ]"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
