--- a/examples/Spain/spain.ipynb
+++ b/examples/Spain/spain.ipynb
@@ -339,7 +339,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from plan import OptimizePlan\n",
+    "from economicplanning import OptimizePlan\n",
     "from numpy import zeros, ones\n",
     "\n",
     "plan_periods = 5\n",
@@ -604,7 +604,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8 (main, Nov 24 2022, 08:09:04) [Clang 14.0.6 ]"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
