--- a/examples/Sweden/sweden.ipynb
+++ b/examples/Sweden/sweden.ipynb
@@ -134,7 +134,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from plan import OptimizePlan\n",
+    "from economicplanning import OptimizePlan\n",
     "from numpy import zeros, ones\n",
     "\n",
     "plan_periods = 15\n",
