--- a/examples/Sweden/sweden.ipynb
+++ b/examples/Sweden/sweden.ipynb
@@ -368,7 +368,7 @@
    ],
    "source": [
     "fig, ax = plt.subplots(1,1, figsize = (8, 6))\n",
-    "fig.suptitle('Evolution of planned production in each period.', size = 16)\n",
+    "fig.suptitle('Evolution of imported final goods in each period.', size = 16)\n",
     "\n",
     "for i in range(num_products):\n",
     "    ax.plot(periods[: plan.plan_periods], plan.planned_final_import[i, :], c=colors[i, :])\n",
