working economy class

--- a/examples/Spain/spain.ipynb
+++ b/examples/Spain/spain.ipynb
@@ -20,7 +20,23 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "supply has shape (110, 81)\n",
+      "use_domestic has shape (110, 81)\n",
+      "use_import has shape (110, 81)\n",
+      "depreciation has shape (110, 110)\n",
+      "final_domestic has shape (110,)\n",
+      "final_export has shape (110,)\n",
+      "prices_import has shape (110,)\n",
+      "prices_export has shape (110,)\n",
+      "worked_hours has shape (81,)\n"
+     ]
+    }
+   ],
    "source": [
     "from sys import path\n",
     "from os.path import join, abspath\n",
@@ -31,11 +47,11 @@
     "if module_path not in path:\n",
     "    path.append(module_path)\n",
     "\n",
-    "with open(join('data', 'spanish_economy.pkl'), 'rb') as f:\n",
-    "    economy = load(f)\n",
+    "from economicplan import Economy\n",
     "\n",
-    "with open(join('data', 'spanish_product_names.pkl'), 'rb') as f:\n",
-    "    product_names, activity_names = load(f)"
+    "with open(join('data', 'spanish_economy.pkl'), 'rb') as f:\n",
+    "    economy_dict = load(f)\n",
+    "    economy = Economy(**economy_dict)"
    ]
   },
   {
@@ -115,7 +131,7 @@
     }
    ],
    "source": [
-    "product_names.head()"
+    "economy.product_names[:5]"
    ]
   },
   {
@@ -187,7 +203,7 @@
     }
    ],
    "source": [
-    "product_names.tail()"
+    "economy.product_names[-5:]\n"
    ]
   },
   {
@@ -356,8 +372,8 @@
     "                    econ = economy\n",
     "                    )\n",
     "\n",
-    "num_products = economy['prices_export'][0].size\n",
-    "init_excess_prod = economy['final_domestic'][0] / 12\n",
+    "num_products = economy.products\n",
+    "init_excess_prod = economy.final_domestic[0] / 12\n",
     "init_export_deficit = 0\n",
     "\n",
     "plan(init_excess_prod, init_export_deficit)\n"
