--- a/examples/Spain/spain.ipynb
+++ b/examples/Spain/spain.ipynb
@@ -42,11 +42,6 @@
     "from os.path import join, abspath\n",
     "from pickle import load\n",
     "\n",
-    "# Tell python to search for the files and modules starting from the working directory\n",
-    "module_path = abspath(join('..', '..'))\n",
-    "if module_path not in path:\n",
-    "    path.append(module_path)\n",
-    "\n",
     "from economicplan import Economy\n",
     "\n",
     "with open(join('data', 'spanish_economy.pkl'), 'rb') as f:\n",
@@ -69,60 +64,12 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 1</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1. Products of agriculture</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2. Live animals and animal products</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3. Agricultural and animal husbandry services</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4. Products of forestry, logging and related s...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5 .Fish and other fishing products; aquacultur...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                          Unnamed: 1\n",
-       "0                         1. Products of agriculture\n",
-       "1                2. Live animals and animal products\n",
-       "2      3. Agricultural and animal husbandry services\n",
-       "3  4. Products of forestry, logging and related s...\n",
-       "4  5 .Fish and other fishing products; aquacultur..."
+       "['1. Products of agriculture',\n",
+       " '2. Live animals and animal products',\n",
+       " '3. Agricultural and animal husbandry services',\n",
+       " '4. Products of forestry, logging and related services',\n",
+       " '5 .Fish and other fishing products; aquaculture products; support services to fishing']"
       ]
      },
      "execution_count": 2,
@@ -141,60 +88,12 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 1</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>105</th>\n",
-       "      <td>106. Services furnished by membership organisa...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>106</th>\n",
-       "      <td>107. Repair services of computers and personal...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>107</th>\n",
-       "      <td>108. Other personal services</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>108</th>\n",
-       "      <td>109. Services of households as employers; undi...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>109</th>\n",
-       "      <td>110. Services provided by extraterritorial org...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                            Unnamed: 1\n",
-       "105  106. Services furnished by membership organisa...\n",
-       "106  107. Repair services of computers and personal...\n",
-       "107                       108. Other personal services\n",
-       "108  109. Services of households as employers; undi...\n",
-       "109  110. Services provided by extraterritorial org..."
+       "['106. Services furnished by membership organisations',\n",
+       " '107. Repair services of computers and personal and household goods',\n",
+       " '108. Other personal services',\n",
+       " '109. Services of households as employers; undifferentiated goods and services produced by households for own use',\n",
+       " '110. Services provided by extraterritorial organisations and bodies']"
       ]
      },
      "execution_count": 3,
@@ -203,7 +102,7 @@
     }
    ],
    "source": [
-    "economy.product_names[-5:]\n"
+    "economy.product_names[-5:]"
    ]
   },
   {
@@ -213,119 +112,12 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 2</th>\n",
-       "      <th>Unnamed: 3</th>\n",
-       "      <th>Unnamed: 4</th>\n",
-       "      <th>Unnamed: 5</th>\n",
-       "      <th>Unnamed: 6</th>\n",
-       "      <th>Unnamed: 7</th>\n",
-       "      <th>Unnamed: 8</th>\n",
-       "      <th>Unnamed: 9</th>\n",
-       "      <th>Unnamed: 10</th>\n",
-       "      <th>Unnamed: 11</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Unnamed: 73</th>\n",
-       "      <th>Unnamed: 74</th>\n",
-       "      <th>Unnamed: 75</th>\n",
-       "      <th>Unnamed: 76</th>\n",
-       "      <th>Unnamed: 77</th>\n",
-       "      <th>Unnamed: 78</th>\n",
-       "      <th>Unnamed: 79</th>\n",
-       "      <th>Unnamed: 80</th>\n",
-       "      <th>Unnamed: 81</th>\n",
-       "      <th>Unnamed: 82</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Crop and animal production, hunting and relate...</td>\n",
-       "      <td>Forestry and logging</td>\n",
-       "      <td>Fishing and aquaculture</td>\n",
-       "      <td>Mining and quarrying</td>\n",
-       "      <td>Processing and preserving of meat and producti...</td>\n",
-       "      <td>Manufacture of dairy products</td>\n",
-       "      <td>Manufacture of other food products</td>\n",
-       "      <td>Fabricación de bebidas</td>\n",
-       "      <td>Manufacture of tobacco products</td>\n",
-       "      <td>Manufacture of textiles</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Education</td>\n",
-       "      <td>Human health activities</td>\n",
-       "      <td>Social work activities</td>\n",
-       "      <td>Creative, arts and entertainment activities; l...</td>\n",
-       "      <td>Sports activities and amusement and recreation...</td>\n",
-       "      <td>Activities of membership organisations</td>\n",
-       "      <td>Repair of computers and personal and household...</td>\n",
-       "      <td>Other personal service activities</td>\n",
-       "      <td>Activities of households as employers; undiffe...</td>\n",
-       "      <td>Activities of extra-territorial organisations ...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1 rows × 81 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                          Unnamed: 2            Unnamed: 3  \\\n",
-       "0  Crop and animal production, hunting and relate...  Forestry and logging   \n",
-       "\n",
-       "                Unnamed: 4            Unnamed: 5  \\\n",
-       "0  Fishing and aquaculture  Mining and quarrying   \n",
-       "\n",
-       "                                          Unnamed: 6  \\\n",
-       "0  Processing and preserving of meat and producti...   \n",
-       "\n",
-       "                      Unnamed: 7                          Unnamed: 8  \\\n",
-       "0  Manufacture of dairy products  Manufacture of other food products   \n",
-       "\n",
-       "               Unnamed: 9                      Unnamed: 10  \\\n",
-       "0  Fabricación de bebidas  Manufacture of tobacco products   \n",
-       "\n",
-       "               Unnamed: 11  ... Unnamed: 73              Unnamed: 74  \\\n",
-       "0  Manufacture of textiles  ...   Education  Human health activities   \n",
-       "\n",
-       "              Unnamed: 75                                        Unnamed: 76  \\\n",
-       "0  Social work activities  Creative, arts and entertainment activities; l...   \n",
-       "\n",
-       "                                         Unnamed: 77  \\\n",
-       "0  Sports activities and amusement and recreation...   \n",
-       "\n",
-       "                              Unnamed: 78  \\\n",
-       "0  Activities of membership organisations   \n",
-       "\n",
-       "                                         Unnamed: 79  \\\n",
-       "0  Repair of computers and personal and household...   \n",
-       "\n",
-       "                         Unnamed: 80  \\\n",
-       "0  Other personal service activities   \n",
-       "\n",
-       "                                         Unnamed: 81  \\\n",
-       "0  Activities of households as employers; undiffe...   \n",
-       "\n",
-       "                                         Unnamed: 82  \n",
-       "0  Activities of extra-territorial organisations ...  \n",
-       "\n",
-       "[1 rows x 81 columns]"
+       "['Activities of membership organisations',\n",
+       " 'Repair of computers and personal and household goods',\n",
+       " 'Other personal service activities',\n",
+       " 'Activities of households as employers; undifferentiated goods- and services-producing activities of households for own use',\n",
+       " 'Activities of extra-territorial organisations and bodies']"
       ]
      },
      "execution_count": 4,
@@ -334,7 +126,7 @@
     }
    ],
    "source": [
-    "activity_names.head()"
+    "economy.sector_names[-5:]"
    ]
   },
   {
@@ -355,12 +147,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "matmul: Input operand 1 has a mismatch in its core dimension 0, with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 110 is different from 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 17\u001b[0m\n\u001b[1;32m     14\u001b[0m init_excess_prod \u001b[39m=\u001b[39m economy\u001b[39m.\u001b[39mfinal_domestic[\u001b[39m0\u001b[39m] \u001b[39m/\u001b[39m \u001b[39m12\u001b[39m\n\u001b[1;32m     15\u001b[0m init_export_deficit \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[0;32m---> 17\u001b[0m plan(init_excess_prod, init_export_deficit)\n",
+      "File \u001b[0;32m~/Documents/Code projects/Economic-Planning/economicplan/optimize.py:185\u001b[0m, in \u001b[0;36mOptimizePlan.__call__\u001b[0;34m(self, surplus, export_deficit)\u001b[0m\n\u001b[1;32m    183\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39miter_period \u001b[39m=\u001b[39m i\n\u001b[1;32m    184\u001b[0m \u001b[39m# Solve the linear programming problem\u001b[39;00m\n\u001b[0;32m--> 185\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49moptimize_period(surplus, export_deficit)\n\u001b[1;32m    186\u001b[0m \u001b[39m# Surplus production and export deficit initialization for the next iteration\u001b[39;00m\n\u001b[1;32m    187\u001b[0m surplus \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mplanned_surplus[\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\n",
+      "File \u001b[0;32m~/Documents/Code projects/Economic-Planning/economicplan/optimize.py:208\u001b[0m, in \u001b[0;36mOptimizePlan.optimize_period\u001b[0;34m(self, surplus, export_deficit)\u001b[0m\n\u001b[1;32m    198\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39moptimize_period\u001b[39m(\u001b[39mself\u001b[39m, surplus: ndarray, export_deficit: \u001b[39mfloat\u001b[39m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    199\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Optimize one period of the plan.\u001b[39;00m\n\u001b[1;32m    200\u001b[0m \n\u001b[1;32m    201\u001b[0m \u001b[39m    Args:\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    206\u001b[0m \u001b[39m        InfeasibleProblem: Exception raised for infeasible LP problems in the input salary.\u001b[39;00m\n\u001b[1;32m    207\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 208\u001b[0m     problem \u001b[39m=\u001b[39m Problem(Minimize(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcost), \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mconstraints(surplus, export_deficit))\n\u001b[1;32m    209\u001b[0m     problem\u001b[39m.\u001b[39msolve(verbose\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n\u001b[1;32m    211\u001b[0m     \u001b[39mif\u001b[39;00m problem\u001b[39m.\u001b[39mstatus \u001b[39min\u001b[39;00m [\u001b[39m\"\u001b[39m\u001b[39minfeasible\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39munbounded\u001b[39m\u001b[39m\"\u001b[39m]:\n",
+      "File \u001b[0;32m~/Documents/Code projects/Economic-Planning/economicplan/optimize.py:258\u001b[0m, in \u001b[0;36mOptimizePlan.constraints\u001b[0;34m(self, surplus, export_deficit)\u001b[0m\n\u001b[1;32m    247\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"Create a list of constraints for the plan and save\u001b[39;00m\n\u001b[1;32m    248\u001b[0m \u001b[39mthe surplus and planned production.\u001b[39;00m\n\u001b[1;32m    249\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    255\u001b[0m \u001b[39m    list: Constraints that define the optimization region.\u001b[39;00m\n\u001b[1;32m    256\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    257\u001b[0m constraints \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpositivity_constraints()\n\u001b[0;32m--> 258\u001b[0m constraints \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mproduction_constraints(surplus)\n\u001b[1;32m    259\u001b[0m constraints \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mexport_constraints(export_deficit)\n\u001b[1;32m    260\u001b[0m \u001b[39mreturn\u001b[39;00m constraints\n",
+      "File \u001b[0;32m~/Documents/Code projects/Economic-Planning/economicplan/optimize.py:293\u001b[0m, in \u001b[0;36mOptimizePlan.production_constraints\u001b[0;34m(self, surplus)\u001b[0m\n\u001b[1;32m    290\u001b[0m supply_use \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39meconomy\u001b[39m.\u001b[39msupply[t] \u001b[39m-\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39meconomy\u001b[39m.\u001b[39muse_domestic[t]\n\u001b[1;32m    291\u001b[0m planned_production \u001b[39m=\u001b[39m supply_use \u001b[39m@\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mactivity[t]\n\u001b[1;32m    292\u001b[0m surplus \u001b[39m=\u001b[39m (\n\u001b[0;32m--> 293\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49meconomy\u001b[39m.\u001b[39;49mdepreciation \u001b[39m@\u001b[39;49m surplus\n\u001b[1;32m    294\u001b[0m     \u001b[39m+\u001b[39m planned_production\n\u001b[1;32m    295\u001b[0m     \u001b[39m+\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfinal_import[t]\n\u001b[1;32m    296\u001b[0m     \u001b[39m-\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39meconomy\u001b[39m.\u001b[39mfinal_domestic[t]\n\u001b[1;32m    297\u001b[0m     \u001b[39m-\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39meconomy\u001b[39m.\u001b[39mfinal_export[t]\n\u001b[1;32m    298\u001b[0m )\n\u001b[1;32m    299\u001b[0m constraints\u001b[39m.\u001b[39mappend(surplus \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m \u001b[39m0\u001b[39m)\n\u001b[1;32m    300\u001b[0m \u001b[39m# We record the planned prod, surplus prod and trade deficit in the revised periods\u001b[39;00m\n",
+      "\u001b[0;31mValueError\u001b[0m: matmul: Input operand 1 has a mismatch in its core dimension 0, with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 110 is different from 4)"
+     ]
+    }
+   ],
    "source": [
     "from economicplan import OptimizePlan\n",
-    "from numpy import zeros, ones\n",
     "\n",
     "plan_periods = 5\n",
     "horizon_periods = 2\n",
@@ -369,7 +176,7 @@
     "plan = OptimizePlan(plan_periods = plan_periods,\n",
     "                    horizon_periods = horizon_periods, \n",
     "                    revise_periods = revise_periods,\n",
-    "                    econ = economy\n",
+    "                    economy = economy\n",
     "                    )\n",
     "\n",
     "num_products = economy.products\n",
@@ -713,7 +520,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4,
   "vscode": {
