methods more readable

--- a/examples/Spain/spain.ipynb
+++ b/examples/Spain/spain.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
        " '5 .Fish and other fishing products; aquaculture products; support services to fishing']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
        " '110. Services provided by extraterritorial organisations and bodies']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
        " 'Activities of extra-territorial organisations and bodies']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,25 +147,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "matmul: Input operand 1 has a mismatch in its core dimension 0, with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 110 is different from 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 17\u001b[0m\n\u001b[1;32m     14\u001b[0m init_excess_prod \u001b[39m=\u001b[39m economy\u001b[39m.\u001b[39mfinal_domestic[\u001b[39m0\u001b[39m] \u001b[39m/\u001b[39m \u001b[39m12\u001b[39m\n\u001b[1;32m     15\u001b[0m init_export_deficit \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[0;32m---> 17\u001b[0m plan(init_excess_prod, init_export_deficit)\n",
-      "File \u001b[0;32m~/Documents/Code projects/Economic-Planning/economicplan/optimize.py:185\u001b[0m, in \u001b[0;36mOptimizePlan.__call__\u001b[0;34m(self, surplus, export_deficit)\u001b[0m\n\u001b[1;32m    183\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39miter_period \u001b[39m=\u001b[39m i\n\u001b[1;32m    184\u001b[0m \u001b[39m# Solve the linear programming problem\u001b[39;00m\n\u001b[0;32m--> 185\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49moptimize_period(surplus, export_deficit)\n\u001b[1;32m    186\u001b[0m \u001b[39m# Surplus production and export deficit initialization for the next iteration\u001b[39;00m\n\u001b[1;32m    187\u001b[0m surplus \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mplanned_surplus[\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\n",
-      "File \u001b[0;32m~/Documents/Code projects/Economic-Planning/economicplan/optimize.py:208\u001b[0m, in \u001b[0;36mOptimizePlan.optimize_period\u001b[0;34m(self, surplus, export_deficit)\u001b[0m\n\u001b[1;32m    198\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39moptimize_period\u001b[39m(\u001b[39mself\u001b[39m, surplus: ndarray, export_deficit: \u001b[39mfloat\u001b[39m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    199\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Optimize one period of the plan.\u001b[39;00m\n\u001b[1;32m    200\u001b[0m \n\u001b[1;32m    201\u001b[0m \u001b[39m    Args:\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    206\u001b[0m \u001b[39m        InfeasibleProblem: Exception raised for infeasible LP problems in the input salary.\u001b[39;00m\n\u001b[1;32m    207\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 208\u001b[0m     problem \u001b[39m=\u001b[39m Problem(Minimize(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcost), \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mconstraints(surplus, export_deficit))\n\u001b[1;32m    209\u001b[0m     problem\u001b[39m.\u001b[39msolve(verbose\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n\u001b[1;32m    211\u001b[0m     \u001b[39mif\u001b[39;00m problem\u001b[39m.\u001b[39mstatus \u001b[39min\u001b[39;00m [\u001b[39m\"\u001b[39m\u001b[39minfeasible\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39munbounded\u001b[39m\u001b[39m\"\u001b[39m]:\n",
-      "File \u001b[0;32m~/Documents/Code projects/Economic-Planning/economicplan/optimize.py:258\u001b[0m, in \u001b[0;36mOptimizePlan.constraints\u001b[0;34m(self, surplus, export_deficit)\u001b[0m\n\u001b[1;32m    247\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"Create a list of constraints for the plan and save\u001b[39;00m\n\u001b[1;32m    248\u001b[0m \u001b[39mthe surplus and planned production.\u001b[39;00m\n\u001b[1;32m    249\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    255\u001b[0m \u001b[39m    list: Constraints that define the optimization region.\u001b[39;00m\n\u001b[1;32m    256\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    257\u001b[0m constraints \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpositivity_constraints()\n\u001b[0;32m--> 258\u001b[0m constraints \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mproduction_constraints(surplus)\n\u001b[1;32m    259\u001b[0m constraints \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mexport_constraints(export_deficit)\n\u001b[1;32m    260\u001b[0m \u001b[39mreturn\u001b[39;00m constraints\n",
-      "File \u001b[0;32m~/Documents/Code projects/Economic-Planning/economicplan/optimize.py:293\u001b[0m, in \u001b[0;36mOptimizePlan.production_constraints\u001b[0;34m(self, surplus)\u001b[0m\n\u001b[1;32m    290\u001b[0m supply_use \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39meconomy\u001b[39m.\u001b[39msupply[t] \u001b[39m-\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39meconomy\u001b[39m.\u001b[39muse_domestic[t]\n\u001b[1;32m    291\u001b[0m planned_production \u001b[39m=\u001b[39m supply_use \u001b[39m@\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mactivity[t]\n\u001b[1;32m    292\u001b[0m surplus \u001b[39m=\u001b[39m (\n\u001b[0;32m--> 293\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49meconomy\u001b[39m.\u001b[39;49mdepreciation \u001b[39m@\u001b[39;49m surplus\n\u001b[1;32m    294\u001b[0m     \u001b[39m+\u001b[39m planned_production\n\u001b[1;32m    295\u001b[0m     \u001b[39m+\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfinal_import[t]\n\u001b[1;32m    296\u001b[0m     \u001b[39m-\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39meconomy\u001b[39m.\u001b[39mfinal_domestic[t]\n\u001b[1;32m    297\u001b[0m     \u001b[39m-\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39meconomy\u001b[39m.\u001b[39mfinal_export[t]\n\u001b[1;32m    298\u001b[0m )\n\u001b[1;32m    299\u001b[0m constraints\u001b[39m.\u001b[39mappend(surplus \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m \u001b[39m0\u001b[39m)\n\u001b[1;32m    300\u001b[0m \u001b[39m# We record the planned prod, surplus prod and trade deficit in the revised periods\u001b[39;00m\n",
-      "\u001b[0;31mValueError\u001b[0m: matmul: Input operand 1 has a mismatch in its core dimension 0, with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 110 is different from 4)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from economicplan import OptimizePlan\n",
     "\n",
@@ -176,14 +160,13 @@
     "plan = OptimizePlan(plan_periods = plan_periods,\n",
     "                    horizon_periods = horizon_periods, \n",
     "                    revise_periods = revise_periods,\n",
-    "                    economy = economy\n",
     "                    )\n",
     "\n",
     "num_products = economy.products\n",
     "init_excess_prod = economy.final_domestic[0] / 12\n",
     "init_export_deficit = 0\n",
     "\n",
-    "plan(init_excess_prod, init_export_deficit)\n"
+    "plan(economy, init_excess_prod, init_export_deficit)\n"
    ]
   },
   {
@@ -520,7 +503,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
