--- a/examples/Spain/spain.ipynb
+++ b/examples/Spain/spain.ipynb
@@ -26,7 +26,7 @@
     "from os.path import join, abspath\n",
     "from pickle import load\n",
     "\n",
-    "from economicplan import Economy\n",
+    "from cybersyn import Economy\n",
     "\n",
     "with open(join('data', 'spanish_economy.pkl'), 'rb') as f:\n",
     "    economy_dict = load(f)\n",
@@ -135,7 +135,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from economicplan import OptimizePlan\n",
+    "from cybersyn import OptimizePlan\n",
     "\n",
     "periods = 5\n",
     "horizon_periods = 2\n",
