--- a/examples/Sweden/sweden.ipynb
+++ b/examples/Sweden/sweden.ipynb
@@ -26,7 +26,7 @@
     "from os.path import join, abspath\n",
     "from pickle import load\n",
     "\n",
-    "from economicplan import Economy\n",
+    "from cybersyn import Economy\n",
     "\n",
     "\n",
     "with open(join('data', 'swedish_economy.pkl'), 'rb') as f:\n",
@@ -88,7 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from economicplan import OptimizePlan\n",
+    "from cybersyn import OptimizePlan\n",
     "\n",
     "periods = 15\n",
     "horizon_periods = 5\n",
