--- a/examples/Spain/spain.ipynb
+++ b/examples/Spain/spain.ipynb
@@ -324,7 +324,7 @@
                 {
                     "data": {
                         "text/plain": [
-                            "<matplotlib.legend.Legend at 0x11bf6d410>"
+                            "<matplotlib.legend.Legend at 0x132060bd0>"
                         ]
                     },
                     "execution_count": 11,
@@ -409,7 +409,7 @@
                 {
                     "data": {
                         "text/plain": [
-                            "<matplotlib.legend.Legend at 0x12a0e65d0>"
+                            "<matplotlib.legend.Legend at 0x1333ae550>"
                         ]
                     },
                     "execution_count": 13,
@@ -523,7 +523,7 @@
                 {
                     "data": {
                         "text/plain": [
-                            "<matplotlib.legend.Legend at 0x12a109710>"
+                            "<matplotlib.legend.Legend at 0x1335aa890>"
                         ]
                     },
                     "execution_count": 16,
