--- a/examples/Spain/spain.ipynb
+++ b/examples/Spain/spain.ipynb
@@ -324,7 +324,7 @@
                 {
                     "data": {
                         "text/plain": [
-                            "<matplotlib.legend.Legend at 0x132060bd0>"
+                            "<matplotlib.legend.Legend at 0x11ea92a10>"
                         ]
                     },
                     "execution_count": 11,
@@ -409,7 +409,7 @@
                 {
                     "data": {
                         "text/plain": [
-                            "<matplotlib.legend.Legend at 0x1333ae550>"
+                            "<matplotlib.legend.Legend at 0x12f4c5450>"
                         ]
                     },
                     "execution_count": 13,
@@ -523,7 +523,7 @@
                 {
                     "data": {
                         "text/plain": [
-                            "<matplotlib.legend.Legend at 0x1335aa890>"
+                            "<matplotlib.legend.Legend at 0x12f78a390>"
                         ]
                     },
                     "execution_count": 16,
