--- a/docs/examples/spain.ipynb
+++ b/docs/examples/spain.ipynb
@@ -27,7 +27,7 @@
                 "\n",
                 "import numpy as np\n",
                 "\n",
-                "from cybersyn import Economy, Ecology, TargetEconomy, TargetEcology\n",
+                "from planning import Economy, Ecology, TargetEconomy, TargetEcology\n",
                 "\n",
                 "\n",
                 "with Path('data', 'economy.pkl').open('rb') as f:\n",
@@ -149,7 +149,7 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "from cybersyn import OptimizePlan\n",
+                "from planning import OptimizePlan\n",
                 "\n",
                 "periods = 6\n",
                 "horizon_periods = 2\n",
