--- a/examples/Sweden/sweden.ipynb
+++ b/examples/Sweden/sweden.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "import numpy as np\n",
     "\n",
-    "from cybersyn import Economy, TargetEconomy\n",
+    "from planning import Economy, TargetEconomy\n",
     "\n",
     "\n",
     "with Path('data', 'economy.pkl').open('rb') as f:\n",
@@ -113,7 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from cybersyn import OptimizePlan\n",
+    "from planning import OptimizePlan\n",
     "\n",
     "periods = 15\n",
     "horizon_periods = 5\n",
